# bluenoise

./: CMakeLists.txt
src/: CMakeLists.txt  annealer.h  bluenoise.cpp  pattern.h
